kic/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: cep-ingress
  annotations:
    kubernetes.io/ingress.class: kong
    konghq.com/strip-path: "true"
    konghq.com/preserve-host: "false"
    konghq.com/protocols: "http"
    konghq.com/plugins: add-rate-limiting-m0
spec:
  rules:
  - http:
      paths:
      - path: /cep
        pathType: Prefix
        backend:
          service:
            name: cep
            port:
              number: 80
